--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.search-bar-container {
+  width: 460px;
+  margin: 0 auto;
+  height: 52px;
+  position: relative;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.search-bar {
+  background: transparent;
+  border: 1px solid #f6f6f6;
+  font-size: 15px;
+  padding-left: 40px;
+  color: #4e5860;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+  width: 100%;
+  height: 100%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.search-bar:focus {
+  outline: none;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
-
-.App-link {
-  color: #61dafb;
+.search-bar-icon {
+  position: absolute;
+  left: 12px;
+  top: 16px;
+  font-size: 22px;
+  color: #ac0a0ad1;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.line-height-1 {
+  line-height: 1;
+}
+.search-result {
+  position: absolute;
+  top: 52px;
+  width: 100%;
+  max-height: 350px;
+  overflow-y: auto;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.28);
+}
+.list-group-item {
+  cursor: pointer;
+}
+.list-group-item.active,
+.list-group-item:hover {
+  background-color: #e1e3e5;
+  border-color: #d3d5d7;
 }
